[-->new] Added login, token-verification, token-refresh, profile get and update apis
