# model/response/common.go
@@ -6,9 +6,19 @@ import "github.com/iamrz1/ab-auth/model"
 type EmptySuccessRes struct {
 	Success bool             `json:"success" example:"false"`
 	Message string           `json:"message" example:"success message"`
-	Data    EmptySuccessData `json:"data"`
+	Data    emptySuccessData `json:"data"`
 }
 
-type EmptySuccessData struct {
+type emptySuccessData struct {
 	Customer model.EmptyObject `json:"object"`
+}
+
+type TokenSuccessRes struct {
+	Success bool   `json:"success" example:"false"`
+	Message string `json:"message" example:"success message"`
+	Data    token  `json:"data"`
+}
+
+type token struct {
+	TokenObject model.Token `json:"object"`
 }
